--- a/src/client/package.json
+++ b/src/client/package.json
@@ -9,15 +9,22 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "daisyui": "^5.4.7",
+    "flowbite": "^3.1.2",
+    "flowbite-react": "^0.12.10",
+    "flyonui": "^2.4.1",
     "next": "16.0.1",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "react-modal": "^3.16.3",
+    "react-select": "^5.10.2",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.17",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
     "sass": "^1.93.3",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4.1.17"
   }
 }
