--- a/src/client/package.json
+++ b/src/client/package.json
@@ -14,6 +14,7 @@
     "flowbite-react": "^0.12.10",
     "flyonui": "^2.4.1",
     "next": "16.0.1",
+    "next-auth": "^4.24.13",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-modal": "^3.16.3",
