--- a/src/client/package.json
+++ b/src/client/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "daisyui": "^5.4.7",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.12.10",
