Basic Debtor is working

--- a/src/express/.env
+++ b/src/express/.env
@@ -6,8 +6,15 @@
 # DB_NAME=DIAMOND_DB
 
 #### === Mac DB ===
+# DB_USER=diamond
+# DB_PASSWORD=dev
+# DB_HOST=localhost
+# DB_PORT=5451
+# DB_NAME=DIAMOND
+
+### === Mac DEV DB ===
 DB_USER=diamond
 DB_PASSWORD=dev
 DB_HOST=localhost
-DB_PORT=5451
-DB_NAME=DIAMOND
+DB_PORT=5452
+DB_NAME=DIAMOND_DB_DEV
