Working on the category page

--- a/src/express/.env
+++ b/src/express/.env
@@ -1,5 +1,20 @@
+#### === Linux Server DB ===
+# DB_USER=diamond
+# DB_PASSWORD=dev
+# DB_HOST=goosecpt1.local
+# DB_PORT=5451
+# DB_NAME=DIAMOND_DB
+
+#### === Mac DB ===
+# DB_USER=diamond
+# DB_PASSWORD=dev
+# DB_HOST=localhost
+# DB_PORT=5451
+# DB_NAME=DIAMOND
+
+### === Mac DEV DB ===
 DB_USER=diamond
 DB_PASSWORD=dev
-DB_HOST=goosecpt1.local
-DB_PORT=5451
-DB_NAME=DIAMOND_DB
+DB_HOST=localhost
+DB_PORT=5452
+DB_NAME=DIAMOND_DB_DEV
